--- a/.gitIgnore
+++ b/.gitIgnore
@@ -7,8 +7,8 @@ node_modules
 # Ignora todos los archivos de texto
 *.txt
 
-# Ignora los archivos relacionados a API keys
-.env
-
 # Ignora archivos de configuración SASS
 .sass-cache
+
+# Ignorar las carpetas
+dist
