--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.4"
+    "mongoose": "^7.4.4",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/uniqid": "^5.3.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
